src/objects/NO_Occupation_Loading_Factor__c.object
<CustomObject>
    <fields>
        <fullName>Factor__c</fullName>
        <label>Factor</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_TPD_Rider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is TPD Rider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupation_Class__c</fullName>
        <label>Occupation Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NO Occupation Loading Factor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Occupation_Class__c</columns>
        <columns>Is_TPD_Rider__c</columns>
        <columns>Factor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NO Occupation Loading Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NO Occupation loading Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>